[gd_scene load_steps=6 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://8bit_wonder/8-BIT WONDER.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://UI/basic UI.tres" type="Theme" id=3]
[ext_resource path="res://sounds/YOU DIED (HD).ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 21
outline_size = 5
outline_color = Color( 0.00392157, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
layer = 45

[node name="death" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="death"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.870588, 0.34902, 0.34902, 0.352941 )

[node name="CenterContainer" type="CenterContainer" parent="death/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="death/ColorRect/CenterContainer"]
margin_left = 246.0
margin_top = 121.0
margin_right = 394.0
margin_bottom = 238.0

[node name="Label" type="Label" parent="death/ColorRect/CenterContainer/VBoxContainer"]
margin_right = 148.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 1 )
text = "YOU DIED!!!"

[node name="VSplitContainer2" type="VSplitContainer" parent="death/ColorRect/CenterContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 148.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 20 )

[node name="retry" type="Button" parent="death/ColorRect/CenterContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 148.0
margin_bottom = 69.0
rect_min_size = Vector2( 120, 20 )
theme = ExtResource( 3 )
text = "REtry"

[node name="VSplitContainer" type="VSplitContainer" parent="death/ColorRect/CenterContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 148.0
margin_bottom = 93.0
rect_min_size = Vector2( 0, 20 )

[node name="quit" type="Button" parent="death/ColorRect/CenterContainer/VBoxContainer"]
margin_top = 97.0
margin_right = 148.0
margin_bottom = 117.0
rect_min_size = Vector2( 120, 20 )
theme = ExtResource( 3 )
text = "Quit"

[node name="died" type="AudioStreamPlayer" parent="death"]
stream = ExtResource( 4 )
[connection signal="_playdied" from="death" to="death" method="_on_death__playdied"]
[connection signal="pressed" from="death/ColorRect/CenterContainer/VBoxContainer/retry" to="death" method="_on_retry_pressed"]
[connection signal="pressed" from="death/ColorRect/CenterContainer/VBoxContainer/quit" to="death" method="_on_quit_pressed"]
